--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,24 +1,37 @@
 <h3>Create an Account</h3>
-
 <form class="ui form" [formGroup]="authForm">
-  <div class="field">
-    <label>Username</label>
-    <input formControlName="username" />
-  </div>
-  {{ authForm.controls["username"].errors | json }}
-  <div class="field">
-    <label>Password</label>
-    <input formControlName="password" />
+  <app-input
+    inputType="text"
+    label="Username"
+    [control]="$any(authForm).controls['username']"
+  ></app-input>
+  <app-input
+    inputType="password"
+    label="Password"
+    [control]="$any(authForm).controls['password']"
+  ></app-input>
+  <app-input
+    inputType="password"
+    label="Password Confirmation"
+    [control]="$any(authForm).controls['passwordConfirmation']"
+  ></app-input>
+
+  <div
+    *ngIf="
+      authForm.controls['password'].touched &&
+      authForm.controls['passwordConfirmation'].touched &&
+      authForm.errors
+    "
+    class="ui red basic label"
+  >
+    <p *ngIf="authForm.errors?.['passwordDontMatch']">
+      Password and PAssword Contirmation must match
+    </p>
   </div>
 
-  {{ authForm.controls["password"].errors | json }}
-  <div class="field">
-    <label>Password Confirmation</label>
-    <input formControlName="passwordConfirmation" />
+  <div>
+    <button class="ui submit button primary">Submit</button>
   </div>
-
-  {{ authForm.controls["passwordConfirmation"].errors | json }}
-  <button class="primary ui submit button">Submit</button>
 
   {{ authForm.errors | json }}
 </form>
