--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <h3>Create an Account</h3>
-<form class="ui form" [formGroup]="authForm">
+<form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm">
   <app-input
     inputType="text"
     label="Username"
@@ -25,13 +25,17 @@
     class="ui red basic label"
   >
     <p *ngIf="authForm.errors?.['passwordDontMatch']">
-      Password and PAssword Contirmation must match
+      Password and Password Contirmation must match
+    </p>
+    <p *ngIf="authForm.errors?.['noConnection']">
+      No Internet connection detected, failed to sign up
+    </p>
+    <p *ngIf="authForm.errors?.['unknownError']">
+      Failed to sign up
     </p>
   </div>
 
   <div>
     <button class="ui submit button primary">Submit</button>
   </div>
-
-  {{ authForm.errors | json }}
 </form>
