--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,8 +1,13 @@
 <div class="field">
   <label>{{ label }}</label>
-  <input [type]="inputType" [formControl]="control" />
+
+  <input *ngIf="controlType==='input'" [type]="inputType" [formControl]="control" />
+
+  <textarea *ngIf="controlType==='textarea'" [formControl]="control"></textarea>
+
   <div *ngIf="showErrors()" class="ui pointing red basic label">
     <p *ngIf="control.errors?.['required']">Value is Required</p>
+    <p *ngIf="control.errors?.['email']">Enter a valid email</p>
     <p *ngIf="control.errors?.['minlength']">
       Value you enterd is
       {{control.errors?.['minlength'].catualLength}}
